# ludo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: Board.cpp.5DB6A3E26F1197DF.idx  Board.h.5F3B57A926CA49AB.idx  Color.h.FB81827228E6CD82.idx  Coordinates.h.649B09B243458CE0.idx  EndTurnEvent.h.9DC5B949D9AD274E.idx  Event.h.FA14858EA26DC58F.idx  EventDispatcher.cpp.31436A8314E15575.idx  EventDispatcher.h.9F57B90295BA829E.idx  EventLoop.cpp.B9D604A01C3FF213.idx  EventLoop.h.C5017317B2A63B0E.idx  MapDrawer.cpp.7EDD7A9CD343ADC1.idx  MovePawnEvent.h.6B2EBCB41016F91B.idx  MovePawnHandler.cpp.64F1A7B968285328.idx  MovePawnHandler.h.EDE5A074AE68B276.idx  Pawn.h.80AF037470C7B9AB.idx  PawnManager.cpp.C7B1729C11A617AB.idx  PawnManager.h.0DF90C803354D5F8.idx  PlayerTurnEvent.h.9823FD59ECBA74E2.idx  PlayerTurnHandler.cpp.4756F59C909E6E3C.idx  PlayerTurnHandler.h.C479E391CAE9106F.idx  RollDiceEvent.h.AE6B33B9DF387ECD.idx  RollDiceHandler.cpp.1B2CEFC34840C768.idx  RollDiceHandler.h.E29B10822115C484.idx  SpecialTiles.h.671853297639230D.idx  StopGameEvent.h.979A913D31BB9DB9.idx  StopGameHandler.h.58A15DB169B1406B.idx  Team.h.051FFF03414FD4BE.idx  Tile.h.B403D04CA4B5CC86.idx  WaitForChoosePawnEvent.cpp.298ABCE121F21CAF.idx  WaitForChoosePawnEvent.h.D45D11A01837E6B6.idx  WaitForChoosePawnHandler.h.F3EF55E0C7B637EC.idx  context.c.4620A418677EFF74.idx  egl_context.c.CF4CD5DFDEE5F4B2.idx  freetype.h.31B9FA7B45A52EB5.idx  ft2build.h.C06F18845B03DC0E.idx  ftconfig.h.7EFB161A20245509.idx  fterrdef.h.6E6B8A93CCEBAB31.idx  ftheader.h.EF87108011F65496.idx  ftstdlib.h.06CCFC391187664E.idx  fttypes.h.7AA7B65D5DE353DC.idx  (+29 more)
include/: Base.h  Base.hpp  Board.h  Board.hpp  Color.h  Color.hpp  Coordinates.hpp  Dimensions.hpp  EndTurnEvent.h  EndTurnEvent.hpp  Event.h  Event.hpp  EventDispatcher.h  EventHandler.h  EventHandler.hpp  EventList.h  EventLoop.h  MapBuilder.hpp  MapDrawer.h  MapDrawer.hpp  MovePawnEvent.h  MovePawnEvent.hpp  MovePawnHandler.h  MovePawnHandler.hpp  Node.h  Pawn.h  Pawn.hpp  PawnManager.h  PawnManager.hpp  Player.h  PlayerTurnEvent.h  PlayerTurnEvent.hpp  PlayerTurnHandler.h  PlayerTurnHandler.hpp  Renderable.hpp  RollDiceEvent.h  RollDiceEvent.hpp  RollDiceHandler.h  RollDiceHandler.hpp  Size.hpp  (+19 more)
src/: Base.cpp  Board.cpp  EventDispatcher.cpp  EventLoop.cpp  Game.cpp  MapBuilder.cpp  MapDrawer.cpp  MovePawnHandler.cpp  Pawn.cpp  PawnManager.cpp  PlayerTurnHandler.cpp  RollDiceHandler.cpp  SpecialTiles.cpp  StartTurnEvent.cpp  StopGameHandler.cpp  Tile.cpp  TileManager.cpp  TurnManager.cpp  WaitForChoosePawnEvent.cpp  WindowManager.cpp  main.cpp
